Use Map.of/List.of/Set.of over Collections and Arrays.asList
As discussed in: https://github.com/triplea-game/triplea/issues/5524

Favor using List.of instead Collections.emptyList, Collections.singletonList,
and Arrays.asList.