@@ -9,7 +9,6 @@ import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
@@ -68,7 +67,7 @@ class LoginModuleTest {
 
   @SuppressWarnings("unused")
   static List<Arguments> rejectLoginOnBadArgs() {
-    return Arrays.asList(
+    return List.of(
         Arguments.of(LoginRequest.builder().password("no-name").build(), "system-id-string", IP),
         Arguments.of(LOGIN_REQUEST, null, IP));
   }
